<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main$DummySectionFragment" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_switches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/Switches" />

        <TextView
            android:id="@+id/element_RedStatus"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="left"
            android:gravity="center_vertical"
            android:text="@string/off"
            android:textColor="#FF6B60"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/LinearLayout1"
        android:gravity="fill_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/control_backward"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/BACK" />

        <Button
            android:id="@+id/control_stop"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/STOP" />

        <Button
            android:id="@+id/control_forward"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/GO" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
        android:orientation="vertical" >

        <SeekBar
            android:id="@+id/seek_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="200" />

        <TextView
            android:id="@+id/text_DisplaySpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Current_speed"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>